# windtunnel

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  GEMINI.md  README.md  docusaurus.config.js  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: intro.md
docs/architecture/: decomposition.md  dsl_research.md
docs/research/spikes/: SPIKE-002-python-dsl.md
docs/rfcs/: RFC-001-multi-protocol-architecture.md
docs/user/: getting-started.md  sut-config.md
docs/user/guides/: _category_.json  ecommerce-testing.md
runs/run_20240122_001/: instances.jsonl  manifest.json  steps.jsonl
src/turbulence/actions/: assert_.py  http.py  wait.py
src/turbulence/api/: main.py
src/turbulence/commands/: run.py  serve.py
src/turbulence/config/: scenario.py
src/turbulence/engine/: conditions.py  executor.py  replay.py  scenario_runner.py
src/turbulence/evaluation/: sandbox.py
src/turbulence/models/: observation.py
src/turbulence/report/: html.py
src/turbulence/utils/: extractor.py  retry_policy.py
src/turbulence/variation/: __init__.py  config.py  engine.py
src/windtunnel/: cli.py
src/windtunnel/actions/: __init__.py  assert_.py  base.py  http.py  wait.py
src/windtunnel/api/: main.py
src/windtunnel/commands/: __init__.py  replay.py  report.py  run.py  serve.py
src/windtunnel/config/: loader.py  scenario.py
src/windtunnel/engine/: __init__.py  context.py  executor.py  (+2 more)
tests/: test_artifact_storage.py  test_assert_action.py  test_cli.py  test_context_templating.py  test_html_report.py  test_http_action.py  test_parallel_executor.py  test_replay.py  test_scenario_config.py  test_sut_config.py  test_turbulence_engine.py  test_variation_config.py  test_variation_engine.py  test_variation_integration.py  test_wait_action.py
tickets/: FEAT-021-fastapi-backend.md  FEAT-022-run-list-page.md  FEAT-023-run-detail-page.md  FEAT-026-dashboard-live-progress.md  FEAT-027-scenario-visualizer.md  FEAT-028-quick-run-launcher.md  SPIKE-002-python-dsl.md  SPIKE-003-multi-protocol-transport.md  TICKET-GRAPH.md
tickets/done/: FEAT-001-cli-scaffold.md  FEAT-002-sut-config-loader.md  FEAT-003-scenario-loader.md  FEAT-004-http-action-runner.md  FEAT-005-wait-action-runner.md  FEAT-006-assert-action.md  FEAT-007-context-templating.md  FEAT-008-artifact-storage.md  FEAT-009-html-report.md  FEAT-010-replay-command.md  FEAT-011-parallel-execution.md  FEAT-012-turbulence-engine.md  FEAT-013-schema-validation.md  FEAT-014-expression-evaluator.md  FEAT-015-enhanced-reports.md  FEAT-017-variation-engine.md  FEAT-018-sqlite-backend.md  FEAT-019-branching-flows.md  FEAT-020-web-ui-foundation.md  FEAT-024-instance-timeline-page.md  FEAT-025-realtime-streaming.md  FEAT-029-results-explorer.md  INFRA-001-project-setup.md  SPIKE-002-python-dsl.md
ui/: package-lock.json  package.json
ui/src/: App.tsx  index.css
use-cases/: UC-001-ecommerce-checkout.md
use-cases/scenarios/: ecommerce-checkout.yaml
use-cases/sut/: httpbin.yaml  mock-ecommerce.yaml
website/: index.html
(+50 files in other folders)
